Cambio en pestaña 2

--- a/tab2.html
+++ b/tab2.html
@@ -12,7 +12,13 @@
       <h1>Pestaña 2</h1>
       <hr>
       <div>
-        ...
+        <form>
+          <label for="fname">Nombre:</label><br>
+          <input type="text" id="fname" name="fname" value=""><br>
+          <label for="lname">Apellido:</label><br>
+          <input type="text" id="lname" name="lname" value=""><br><br>
+          <input type="submit" value="Enviar">
+        </form>
       </div>
     </div>
   </body>
